<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="@drawable/ic_arrow_left"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_uang_masuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/uang_masuk"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_simpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="5dp"
        android:text="@string/simpan"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_uang_masuk"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_uang_masuk" />

    <TextView
        android:id="@+id/tv_masuk_ke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:text="@string/masuk_ke"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />

    <EditText
        android:id="@+id/et_masuk_ke"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:hint="@string/masuk_ke"
        android:inputType="text"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_simpan"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/tv_masuk_ke"
        app:layout_constraintTop_toBottomOf="@id/tv_masuk_ke"
        app:layout_constraintWidth_default="spread"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_dari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="18dp"
        android:text="@string/dari"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_masuk_ke" />

    <EditText
        android:id="@+id/et_dari"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:hint="@string/dari"
        android:inputType="text"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_simpan"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/tv_dari"
        app:layout_constraintTop_toBottomOf="@id/tv_dari"
        app:layout_constraintWidth_default="spread"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_jumlah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="18dp"
        android:text="@string/jumlah"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_dari" />

    <EditText
        android:id="@+id/et_jumlah"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:hint="@string/jumlah"
        android:inputType="number"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_simpan"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/tv_jumlah"
        app:layout_constraintTop_toBottomOf="@id/tv_jumlah"
        app:layout_constraintWidth_default="spread"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_keterangan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="18dp"
        android:text="@string/keterangan"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_jumlah" />

    <EditText
        android:id="@+id/et_keterangan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:hint="@string/keterangan"
        android:inputType="number"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_simpan"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/tv_keterangan"
        app:layout_constraintTop_toBottomOf="@id/tv_keterangan"
        app:layout_constraintWidth_default="spread"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_jenis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="18dp"
        android:text="@string/jenis"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_keterangan" />

    <Spinner
        android:id="@+id/dropdown_jenis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/keterangan"
        android:inputType="number"
        android:padding="15dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_lebih_tahu"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/tv_jenis"
        app:layout_constraintTop_toBottomOf="@id/tv_jenis"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_lebih_tahu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lebih_tahu"
        android:textColor="@color/green"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_simpan"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toEndOf="@+id/tv_jenis"
        app:layout_constraintTop_toBottomOf="@+id/tv_jenis" />

    <TextView
        android:id="@+id/tv_foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="18dp"
        android:text="@string/foto"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropdown_jenis" />

    <ImageView
        android:id="@+id/iv_bukti"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_gallery"
        android:contentDescription="@string/foto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_foto"/>

    <TextView
        android:id="@+id/tv_ubah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/ubah"
        android:textColor="@color/green"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/iv_bukti"
        app:layout_constraintTop_toTopOf="@+id/iv_bukti" />

    <TextView
        android:id="@+id/tv_hapus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/hapus"
        android:textColor="@color/red"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tv_ubah"
        app:layout_constraintTop_toTopOf="@+id/iv_bukti" />


</androidx.constraintlayout.widget.ConstraintLayout>
