<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_sheet">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_remove"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_pendapatan_lain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:padding="8dp"
            android:text="@string/pendapatan_lain"
            android:textColor="@color/black"
            android:textSize="23dp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tv_ket_pendapatan_lain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:padding="8dp"
            android:text="@string/contoh_pendapatan_lain"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_contoh_pendapatan_lain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:padding="8dp"
            android:text="@string/contoh"
            android:textColor="@color/black"
            android:textSize="23dp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tv_contoh_x_pendapatan_lain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:padding="8dp"
            android:text="@string/contoh_x_pendapatan_lain"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp" />

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="@drawable/divider"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_non_pendapatan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:padding="8dp"
            android:text="@string/non_pendapatan"
            android:textColor="@color/black"
            android:textSize="23dp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tv_ket_non_pendapatan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:padding="8dp"
            android:text="@string/contoh_non_pendapatan"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_contoh_non_pendapatan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:padding="8dp"
            android:text="@string/contoh"
            android:textColor="@color/black"
            android:textSize="23dp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tv_contoh_x_non_pendapatan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:padding="8dp"
            android:text="@string/contoh_x_non_pendapatan"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp" />

    </LinearLayout>




</LinearLayout>